# HARP-fork

./: CMakeLists.txt  HARP_Defines.h  HARP_License.txt  a_build_HARP.sh  run_examples.sh  run_settings.sh
PythonLib/: General.py  GraphViz.py  Imports_Basic.py  Match.py  Mathematiker.py  Numpy.py  OpenCV.py  Plot.py  Qt.py  Regex.py  Sequence.py  System.py  Warp.py
PythonLib/Encoder/: Base_Encoder.py  HM_Encoder.ini  HM_Encoder.py  X265_Encoder.py  X265_Settings.ini
PythonLib/GUI/: AnalyzePOC.py  ShowPOC.py  __init__.py
PythonLib/Installer/: Base_Installer.py  CLib_CMAKE.py  CLib_LIBYUV.py  CLib_YASM.py  EclipseProject.py  OPENCV_Installer.py  X265_Installer.py  YASM_Installer.py
PythonLib/Toolboxes/: TB_SequenceGenerator.py
PythonScripts/: a_HARP_LiveDemo_ICIP2014.py  a_LibInstaller.py  a_loggeRAM.py
Src_HARP/: CCallgrind.h  CGlobal.cpp  CGlobal.h  CHelper.h  CShow.h  CShow_Conversion.h  CShow_PredictionUnits.h  CShow_RDO.h  CShow_RefIndices.h  CShow_TransformUnits.h  CShow_UnitCloseup.h  PyCTU.h  PyFactory.h  PyHelper.h
Src_HM/: LICENSE_HM.txt
Src_HM/source/App/TAppDecoder/: decmain.cpp
Src_HM/source/App/TAppEncoder/: TAppEncCfg.h  TAppEncTop.cpp  encmain.cpp
Src_HM/source/Lib/TAppCommon/: program_options_lite.cpp
Src_HM/source/Lib/TLibCommon/: TComDataCU.cpp  TComMv.h  TComPrediction.cpp  TComRdCost.cpp  TComRdCost.h  TComYuv.h
Src_HM/source/Lib/TLibDecoder/: TDecCu.cpp  TDecSbac.cpp  TDecSlice.cpp
Src_HM/source/Lib/TLibEncoder/: TEncCu.cpp  TEncGOP.cpp  TEncSbac.cpp  TEncSearch.cpp  TEncSearch.h  TEncSlice.cpp
Various/Resources/: LICENSE_Resources.txt
Various/Resources/Special/: LICENSE_Special.txt  LMS_Logo_640x360.yuv
